Fixed buttons hover and color, dimensions of photos, wrap for photos when web is smaller

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ h1 {
     font-size:48px;
     font-weight:bolder;
     color: #f9faf8;
+    text-shadow: 10px 10px 70px #ffffff;
 }
 
 .bottomheader p {
@@ -94,12 +95,18 @@ h1 {
 }
 
 .leftcont button {
-    background-color: #af3eae;
+    background-color: #3D246C;
+    color: white;
     border: 0px;
     border-radius:5px;
     width:120px;
     padding-top:10px;
     padding-bottom: 10px;
+}
+
+.leftcont button:hover {
+    background-color: white;
+    color: #3D246C;
 }
 
 .rightcont {
@@ -120,10 +127,11 @@ h1 {
     width: 100%;
     display:flex;
     flex-direction: row;
-    flex-grow: 1;
+    flex: 0 0 auto;
     justify-content: space-around;
     align-items:flex-start;
     color: #3d3030;
+    flex-wrap: wrap;
 
 }
 
@@ -132,15 +140,13 @@ h1 {
     flex-direction:column;
     justify-content: center;
     align-items:center;
+
 }
 .abilitiespic {
-    width:300px;
+    width:200px;
     height:auto;
-    border-radius: 5%;
-    border-style: dashed;
-    border:2px;
-    border-color: black;
-    box-shadow: 10px 10px 10px rgba(118, 101, 119, 0.712);
+    border-radius: 20%;
+    box-shadow: 5px 5px 5px rgba(118, 101, 119, 0.712);
     margin-bottom:25px;
 }
 
@@ -188,9 +194,18 @@ h2 {
 }
 
 .signupbutton button {
-    border-color: #f3dfdf;
     background-color: transparent;
-    padding:5px;
+    color: white;
+    border: 1px solid white;
+    border-radius: 20px;
+    width:80px;
+    padding-top:10px;
+    padding-bottom: 10px;
+}
+
+.signupbutton button:hover {
+    background-color: white;
+    color: #9F91CC;
 }
 
 
